--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
     <header>
       <div class="logo">
-        <img src="./img/img-myt-logo.jpg" alt="My Times Logo">
-        <h6>My Times</h6>
+        <img class="logo" src="./img/img-myt-logo.jpg" alt="My Times Logo">
+        <h6 class="logo">My Times</h6>
       </div>
-      <nav>
+      <nav class="menu">
         <ul>
           <li><a href="#">World</a></li>
           <li><a href="#">U.S.</a></li>
@@ -21,6 +21,36 @@
         </ul>
       </nav>
     </header>
+
+    <div class="main">
+      <div class="column-1">
+        <div class="story-main">
+          <img src="./img/img-story-main.png" alt="Main Story">
+          <div class="overlay">
+            <p class="overlay">Mother of Three Buys Tuna Steak at Phish Concert.
+              Leaves, "Feeling Funny."</p>
+          </div>
+          <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim.
+            Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin
+            ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae
+            est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum
+            tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris.
+            Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan.
+            Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor,
+            sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum,
+            sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a
+            hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
+
+        </div>
+      </div>
+      <div class="column-2">
+
+      </div>
+      <div class="column-3">
+
+      </div>
+    </div>
 
   </body>
 </html>
