Add flexbox capabilities

--- a/index.html
+++ b/index.html
@@ -1,68 +1,74 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>My Times</title>
-    <link rel="stylesheet" href="./css/style.css" type="text/css">
-  </head>
-  <body>
 
-    <header>
-      <div class="logo">
-        <img class="logo" src="./img/img-myt-logo.jpg" alt="My Times Logo">
-        <h6 class="logo">My Times</h6>
-      </div>
-      <nav class="menu">
-        <ul>
-          <li><a href="#">World</a></li>
-          <li><a href="#">U.S.</a></li>
-          <li><a href="#">Tech</a></li>
-          <li><a href="#">Science</a></li>
-        </ul>
-      </nav>
-    </header>
+<head>
+  <meta charset="utf-8">
+  <title>My Times</title>
+  <link rel="stylesheet" href="./css/style.css" type="text/css">
+</head>
 
-    <div class="content">
-      <div class="column left">
-        <div class="lead-story">
-          
-          <div class="image-content">
-            <span class="overlay">Mother of Three Buys Tuna Steak at Phish Concert.
+<body>
+
+  <header>
+    <div class="logo">
+      <img src="./img/img-myt-logo.jpg" alt="My Times Logo">
+      <h6>My Times</h6>
+    </div>
+    <nav class="menu">
+      <ul>
+        <li><a href="#">World</a></li>
+        <li><a href="#">U.S.</a></li>
+        <li><a href="#">Tech</a></li>
+        <li><a href="#">Science</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <div class="content">
+    <div class="column left">
+
+      <div class="lead-story">
+        <div class="image-content">
+          <span class="overlay">Mother of Three Buys Tuna Steak at Phish Concert.
               Leaves, "Feeling Funny."</span>
-          </div>
-
-          <div class="story-content">
-            <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur
-              adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim.
-              Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin
-              ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae
-              est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum
-              tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris.
-              Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan.
-              Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor,
-              sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum,
-              sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a
-              hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.
-            </p>
-          </div>
-
-          <div class="aside left">
-            Some content
-          </div>
-
-          <div class="aside right">
-            Some content
-          </div>
-
         </div>
-      </div>
-      <div class="column middle">
 
-      </div>
-      <div class="column right">
+        <div class="story-content">
+          <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien
+            massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus,
+            lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam
+            sit amet fringilla massa.
+          </p>
+        </div>
 
+        <div class="stories">
+          <div class="story">
+            <div class="story-content">
+              <h2>Orca Spends Vacation at Land World Puget</h2>
+              <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...
+              </p>
+            </div>
+          </div>
+
+          <div class="story">
+            <div class="story-content">
+              <h2>Burger for Breakfast: How Early is too Early?</h2>
+              <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
-  </body>
+    <div class="column middle">
+
+    </div>
+    <div class="column right">
+
+    </div>
+  </div>
+
+</body>
+
 </html>
