Add stories to large column

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="column left">
 
       <div class="lead-story">
-        <div class="image-content">
+        <div class="image-content lead-story">
           <span class="overlay">Mother of Three Buys Tuna Steak at Phish Concert.
               Leaves, "Feeling Funny."</span>
         </div>
@@ -45,17 +45,27 @@
           <div class="story">
             <div class="story-content">
               <h2>Orca Spends Vacation at Land World Puget</h2>
-              <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...
+              <p class="narrative">PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...
               </p>
             </div>
+
+            <div class="image-content left-aside">
+              <span class="overlay center">Earth Spins Backwards for 2017</span>
+            </div>
+
           </div>
 
           <div class="story">
             <div class="story-content">
               <h2>Burger for Breakfast: How Early is too Early?</h2>
-              <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.
+              <p class="narrative">Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.
               </p>
             </div>
+
+            <div class="image-content right-aside">
+              <span class="overlay center">Research Shows Cameras Erase Memory</span>
+            </div>
+
           </div>
         </div>
       </div>
@@ -63,11 +73,29 @@
 
     <div class="column middle">
 
+      <div class="story">
+        <div class="story-content">
+          <h2>FBI Finds Action Star Guilty of False Advertising</h2>
+          <p class="narrative">WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque
+            consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit
+            aliquam felis...
+          </p>
+        </div>
+      </div>
     </div>
+
     <div class="column right">
+      <div class="story">
+        <div class="story-content">
+          <h2>FBI Finds Action Star Guilty of False Advertising</h2>
+          <p class="narrative">WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque
+            consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit
+            aliquam felis...
+          </p>
+        </div>
+      </div>
 
     </div>
-  </div>
 
 </body>
 
