--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="column left">
 
       <div class="lead-story">
-        <div class="image-content lead-story">
+        <div class="image-content story-main">
           <span class="overlay">Mother of Three Buys Tuna Steak at Phish Concert.
               Leaves, "Feeling Funny."</span>
         </div>
@@ -49,7 +49,7 @@
               </p>
             </div>
 
-            <div class="image-content left-aside">
+            <div class="image-content story-2">
               <span class="overlay center">Earth Spins Backwards for 2017</span>
             </div>
 
@@ -62,7 +62,7 @@
               </p>
             </div>
 
-            <div class="image-content right-aside">
+            <div class="image-content story-3">
               <span class="overlay center">Research Shows Cameras Erase Memory</span>
             </div>
 
@@ -81,21 +81,48 @@
             aliquam felis...
           </p>
         </div>
+
+        <div class="image-content story-1">
+          <span class="overlay center">Cats in Control-Is It a Thing?</span>
+        </div>
+
+        <p class="narrative">BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a
+          vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.
+        </p>
       </div>
     </div>
 
     <div class="column right">
       <div class="story">
-        <div class="story-content">
-          <h2>FBI Finds Action Star Guilty of False Advertising</h2>
-          <p class="narrative">WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque
-            consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit
-            aliquam felis...
-          </p>
+        <div class="image-content story-bite"></div>
+        <h4 class="center">News Bites</h4>
+
+        <div class="news-bites">
+          <ol>
+            <li>Cat Emoji Goes Viral</li>
+            <li>Buy Youtube Views</li>
+            <li>Home Business Advertising Ideas</li>
+            <li>Advertising Internet Online</li>
+            <li>Illustration in Marketing Materials</li>
+            <li>Finally a Top Secret Way You Can</li>
+          </ol>
         </div>
       </div>
-
     </div>
+  </div>
+
+  <footer>
+    <div class="content">
+      <p class="title">MY Times</p>
+      <ol>
+        <li><a href="#">World</a></li>
+        <li><a href="#">U.S.</a></li>
+        <li><a href="#">Tech</a></li>
+        <li><a href="#">Science</a></li>
+      </ol>
+      <p class="copyright">© 2016, My Times (A Division of Codecademy bite)</p>
+    </div>
+  </footer>
 
 </body>
 
